--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,74 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+    font-size: 62.5%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    font-size: 2rem;
+}
+
+/* Typography */
+p {
+    @apply my-4 text-primary
+}
+
+h1, h2, h3, h4, h5 {
+    @apply font-bold text-primary
+}
+
+h1 {
+    font-size: 6rem;
+}
+
+h2 {
+    font-size: 4rem;
+    @apply my-8
+}
+
+h3 {
+    font-size: 3rem;
+    @apply my-4
+}
+
+h4 {
+    font-size: 2rem;
+    @apply my-2
+}
+
+h5 {
+    font-size: 1.5rem;
+    @apply my-1
+}
+
+/* Lists */
+ul {
+    @apply list-disc p-4 m-4
+}
+
+ol {
+    @apply list-decimal p-4 m-4
+}
+
+/* Links */
+a.link {
+    @apply font-semibold underline text-primary hover:text-brand-dark
+}
+
+/* Buttons */
+.btn {
+    border-radius: 1rem;
+    padding: 1.4rem 2.75rem;
+    @apply bg-brand hover:bg-brand-dark text-white m-2
+}
+
+.btn.-secondary {
+    @apply bg-primary hover:bg-primary-light
+}
+
+/* Misc */
+section {
+    @apply my-10
 }
